# C_homework

./: CMakeLists.txt  README.md  description.md  mainwindow.cpp  mainwindow.h
code/: CMakeLists.txt  define_the_const.h  gacha.cpp  gacha.h  logwindow.cpp  logwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  random.cpp  random.h  war.cpp  war.h
description/: 游戏策划.docx  游戏策划.md  源代码.md
scource/roles/: 角色目录.md
source/: 目录.md
source/roles/: 角色目录.md
